# telegram-mood-tracker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-arm64v8  Dockerfile.arm  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build.yml
scripts/: backup.sh  build.sh  docker-util.sh  prune_repository.sh  run.sh  stop.sh  test.sh
src/: app.py  command_handlers.py  config.py  graph.py  notifier.py  persistence.py  reminder.py  state.py  visualise.py
src/autowiring/: inject.py  injectable.py
src/config/: auto_baseline.py  config.py  config_metric.py  db_config.py
src/data/: appetite.py  mood.py  numeric_metric.py  record.py
src/domain/: metric.py  record.py  user.py
src/exception/: auto_baseline_exception.py
src/handlers/: command_handlers.py  error_handler.py  graphing.py  metrics_handlers.py  record_handlers.py  state.py  stats_handler.py  user_handlers.py  util.py
src/model/: metric.py  notification.py  record.py  user.py
src/repository/: db_utils.py  dynamodb_user_repository.py  initialize.py  migrate.py  persistence.py  record_repository.py  user_repository.py
src/service/: user_service.py
terraform/: dynamodb.tf  ecr.tf  main.tf
terraform/files/: ABOUT.md  USAGE.md
test/: __init__.py  conftest.py  coverage.xml  test_autowiring.py  test_config_parsing.py  test_graph.py  test_metric.py  test_notifications.py  test_record.py  test_record_model.py  test_user_init.py
test/integration/: conftest.py  test_auto_baseline_integration.py  test_graphing.py  test_notification.py  test_notifier.py  test_record.py  test_record_integration.py  test_record_repository.py  test_repository.py  test_retry_timeout.py  test_user_init.py  test_user_integration.py
test/resources/: config.test.yaml
(+16 files in other folders)
